Fix overflow

--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -18,7 +18,6 @@
   opacity: 0;
   filter: blur(2px);
   transform: translateX(-5%);
-  overflow: hidden;
   transition: all 1s;
 }
 
